--- a/JSONServer.cbp
+++ b/JSONServer.cbp
@@ -7,6 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Release">
+				<Option platforms="Unix;Mac;" />
 				<Option output="bin/Release/AIServer" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
@@ -16,6 +17,24 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="boost_system-mt" />
+					<Add library="boost_thread-mt" />
+				</Linker>
+			</Target>
+			<Target title="Release Win">
+				<Option output="bin/Release/AIServer" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="boost_system-mgw48-mt-1_55" />
+					<Add library="boost_thread-mgw48-mt-1_55" />
+					<Add library="ws2_32" />
+					<Add library="mswsock" />
 				</Linker>
 			</Target>
 		</Build>
@@ -25,10 +44,9 @@
 			<Add directory="include" />
 		</Compiler>
 		<Linker>
-			<Add library="boost_system-mt" />
-			<Add library="boost_thread-mt" />
 			<Add directory="src" />
 		</Linker>
+		<Unit filename="include/server.hpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
